--- a/index.html
+++ b/index.html
@@ -80,19 +80,19 @@
                     <h3>Photo Gallery</h3>
                     <div class="gallery-content portrait-layout">
                         <div class="photo-item">
-                            <img src="/ASSETS/PHOTOS/FOOD 2.jpg" alt="Food Photography 1">
+                            <img src="/ASSETS/FOOD 2.jpg" alt="Food Photography 1">
                         </div>
                         <div class="photo-item">
-                            <img src="/ASSETS/PHOTOS/FOOD 3.jpg" alt="Food Photography 2">
+                            <img src="/ASSETS/FOOD 3.jpg" alt="Food Photography 2">
                         </div>
                         <div class="photo-item">
-                            <img src="/ASSETS/PHOTOS/BEVERAGE 1.jpg" alt="Beverage Photography 1">
+                            <img src="/ASSETS/BEVERAGE 1.jpg" alt="Beverage Photography 1">
                         </div>
                         <div class="photo-item">
-                            <img src="/ASSETS/PHOTOS/BEVERAGE 2.jpg" alt="Beverage Photography 2">
+                            <img src="/ASSETS/BEVERAGE 2.jpg" alt="Beverage Photography 2">
                         </div>
                         <div class="photo-item">
-                            <img src="/ASSETS/PHOTOS/BEVERAGE 3.jpg" alt="Beverage Photography 3">
+                            <img src="/ASSETS/BEVERAGE 3.jpg" alt="Beverage Photography 3">
                         </div>
                     </div>
                 </div>
